# lifts

./: .pre-commit-config.yaml  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mentzer/: apps.py  (+6 more)
pr_tracking/: Dockerfile  Justfile  docker-compose.yml  pyproject.toml  requirements.txt
pr_tracking/monolith/: Justfile  db.sqlite3
pr_tracking/monolith/monolith/: asgi.py  settings.py  urls.py  wsgi.py
pr_tracking/monolith/pr_tracking_web/: admin.py  apps.py  urls.py  views.py
pr_tracking/monolith/pr_tracking_web/forms/: log_workout_forms.py  new_designed_workout_form.py  new_exercise_form.py  registration.py
pr_tracking/monolith/pr_tracking_web/migrations/: 0001_initial.py  0002_remove_performance_date_performance_created_at_and_more.py  0003_rename_exercise_exercise_exercise_name.py  0007_rename_reps_setinstance_reps_completed_and_more.py
pr_tracking/monolith/pr_tracking_web/models/: Exercises.py  GymRat.py  Performances.py  Workouts.py  current_personal_record.py  designed_workout.py  exercise.py  exercises.py  gym_rat.py  performances.py  set_instance.py  workout_instance.py  workout_template.py  workouts.py
pr_tracking/monolith/pr_tracking_web/static/: base.css  landing_page.css
pr_tracking/monolith/pr_tracking_web/views/: exercise_views.py
pr_tracking/monolith/swole_stats_api/: admin.py  urls.py
pr_tracking/monolith/swole_stats_api/migrations/: 0001_initial.py  0002_alter_notionalexercise_gym_rat.py  0003_workoutoutline_created_at_and_more.py  0004_alter_setrecord_reps_completed_and_more.py  (+1 more)
(+83 files in other folders)
