[tool.poetry]
name = "pr-tracking"
version = "0.1.0"
description = ""
authors = ["Dario <dariiio.beltran@gmail.com>"]
readme = "README.md"
packages = [{include = "pr_tracking"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
